--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>"Odin Recipes"</h1>
-    <a href="recipes/brownies.html">Brownies</a>
+    <ul>
+        <li><a href="recipes/brownies.html">Brownies</a></li>
+        <li><a href="recipes/creme-caramel.html">Creme Caramel</a></li>
+        <li><a href="recipes/apple-pie.html">Apple Pie</a></li>    
+    </ul>
 </body>
 </html>
