--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>"Odin Recipes"</h1>
-    <ul>
+    <h1 id="title">Odin Recipes</h1>
+    <ul id ="subheading">
         <li><a href="recipes/brownies.html">Brownies</a></li>
         <li><a href="recipes/creme-caramel.html">Creme Caramel</a></li>
         <li><a href="recipes/apple-pie.html">Apple Pie</a></li>    
