--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Apple Pie</h1>
+    <h1 id="title">Apple Pie</h1>
     <img src="../images/apple-pie.jpg" alt="A Brownie Picture">
     <h3>This amazing apple pie recipe belonged to someone's grandmother. I have never seen another one quite like it! It will always be my favorite and has won several first place prizes in local competitions. It makes the perfect dessert for family dinners or during the holidays, topped with whipped cream or ice cream, or alongside a slice of Cheddar cheese.    </h3>
     <h4>Ingredients</h4>
