--- a/recipes/creme-caramel.html
+++ b/recipes/creme-caramel.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Creme Caramel</h1>
+    <h1 id="title">Creme Caramel</h1>
     <img src="../images/creme-caramel.jpg" alt="A Brownie Picture">
     <h3>Creme caramel belongs on the short list for 'World's Greatest Dessert.' The way the almost-burnt caramel layer gets fused on, and becomes one with, the creamy custard is nothing short of magic.    </h3>
     <h4>Ingredients</h4>
