--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Brownies</h1>
+    <h1 id="title">Brownies</h1>
     <img src="../images/brownies.jpg" alt="A Brownie Picture">
     <h3>This easy brownie recipe takes about 30 minutes to make from start to finish for a chocolaty treat!    </h3>
     <h4>Ingredients</h4>
